[chromium] DRT crashes at shutdown. https://bugs.webkit.org/show_bug.cgi?id=81504

Patch by Hao Zheng <zhenghao@chromium.org> on 2012-03-19
Reviewed by James Robinson.

WebCompositor must be destroyed after WebView is properly destroyed,
or some compositor objects like CCLayerTreeHost may not be destroyed.
However, it is really hard to make the destruction order correct
explicitly in ~TestShell. So move it out to DumpRenderTree.

* DumpRenderTree/chromium/DumpRenderTree.cpp:
(main):
* DumpRenderTree/chromium/TestShell.cpp:
(TestShell::~TestShell):

Canonical link: https://commits.webkit.org/98764@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111220 268f45cc-cd09-0410-ab3c-d52691b4dbfc